# popcorn-cli

./: .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  build.rs  consts.go  go.mod  go.sum  install.ps1  install.sh  main.go  models.go  service.go
.github/: build.yml  release.yml
.github/workflows/: arm64-smoke.yml  build.yml  test.yml
docs/: helion-hackathon.md  linalg-qr-b200.md  princeton2026.md  profiling.md
docs/AMD_workshop/: INSTALL.md  README.md  example.py  load_inline_sample.py
rust/: .gitignore  Cargo.toml  README.md
rust/src/: main.rs
rust/src/cmd/: auth.rs  mod.rs
rust/src/models/: mod.rs
rust/src/service/: mod.rs
rust/src/utils/: mod.rs
src/: main.rs
src/cmd/: admin.rs  auth.rs  discord_oauth.go  mod.rs  popcorn-cli.go  setup.rs  submissions.rs  submit.rs
src/models/: mod.rs  types.go
src/service/: api.go  mod.rs
src/utils/: mod.rs  utils.go
src/views/: ascii_art.rs  file_selection_page.rs  loading_page.rs  mod.rs  result_page.rs  selection.rs  welcome_page.rs
templates/setup/: AGENTS.md  submission.py
templates/setup/skills/popcorn-submission-workflow/: SKILL.md
